@@ -4,8 +4,6 @@ class ResourceLoaderModuleTest extends ResourceLoaderTestCase {
 
 	/**
 	 * @covers ResourceLoaderModule::getVersionHash
-	 * @covers ResourceLoaderModule::getModifiedTime
-	 * @covers ResourceLoaderModule::getModifiedHash
 	 */
 	public function testGetVersionHash() {
 		$context = $this->getResourceLoaderContext();
